--- a/playtogether/resources/css/custom.css
+++ b/playtogether/resources/css/custom.css
@@ -378,3 +378,17 @@ body.dark .switch::before{
     width: calc(100% - 88px);
 
 }
+
+/*
+@media screen and (max-width:1750px){
+    .video-inicio{
+        display: none;
+    }
+} */
+
+
+@media screen and (max-width:760px){
+    .formularios-log{
+        margin-top: 150px;
+    }
+}
