--- a/playtogether/public/sccs/app.scss
+++ b/playtogether/public/sccs/app.scss
@@ -653,7 +653,7 @@ body.dark .switch::before{
     position: relative;
     bottom: 17vh;
     margin-top: 50px;
-
+    color: var(--text2-color)
   }
   .config{
     position: relative;
@@ -887,6 +887,7 @@ dialog::backdrop{
   overflow-x: auto;
   scroll-behavior: smooth;
   flex-direction: column;
+
 }
 
 .grupos-container::-webkit-scrollbar {
@@ -902,6 +903,7 @@ dialog::backdrop{
   background-color: var(--primary-color);
   border-radius: 6px;
   margin-bottom: 50px;
+  background-color: red;
 }
 
 .grupos .image {
@@ -909,9 +911,6 @@ dialog::backdrop{
   align-items: center;
 }
 
-.grupos img:hover {
-  filter: drop-shadow(0 -6mm 4mm #4444dd);
-}
 
 .grupos-thumb {
   max-width: 300px;
@@ -965,6 +964,30 @@ dialog::backdrop{
 }
 
 
+
+
+@media screen and (max-width: 1150px) {
+  .grupos-card{
+    width: 500px;
+    height: 345px;
+  }
+
+  .grupos-short-description {
+    width: 375px;
+    height: 108%;
+    margin-left: -266px;
+    margin-top: 182px;
+  }
+
+  .grupos .button a{
+    margin-top: -272px;
+    margin-left: -4px;
+  }
+
+ }
+
+
+
 /*CLASES*/
 
 
@@ -1013,9 +1036,6 @@ dialog::backdrop{
   overflow: hidden;
 }
 
-.clases img:hover{
-  filter: drop-shadow(0 -6mm 4mm #4444dd);
-}
 
 .clases-thumb {
   width: 100%;
@@ -1255,144 +1275,6 @@ dialog::backdrop{
 
 }
 
-
- /*EDITOR FOTO */
-
-
- .container{
-  width: 850px;
-  padding: 30px 35px 35px;
-
-}
-.container.disable .editor-panel,
-.container.disable .controls .reset-filter,
-.container.disable .controls .save-img{
-  opacity: 0.5;
-  pointer-events: none;
-}
-.container h2{
-  margin-top: -8px;
-  font-size: 22px;
-  font-weight: 500;
-}
-.container .wrapper{
-  display: flex;
-  margin: 20px 0;
-  min-height: 335px;
-}
-.wrapper .editor-panel{
-  padding: 15px 20px;
-  width: 280px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-.editor-panel .title{
-  display: block;
-  font-size: 16px;
-  margin-bottom: 12px;
-}
-.editor-panel .options, .controls{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.editor-panel button{
-  outline: none;
-  height: 40px;
-  font-size: 14px;
-  color: #6C757D;
-  background: #fff;
-  border-radius: 3px;
-  margin-bottom: 8px;
-  border: 1px solid #aaa;
-}
-.editor-panel .filter button{
-  width: calc(100% / 2 - 4px);
-}
-.editor-panel button:hover{
-  background: #f5f5f5;
-}
-.filter button.active{
-  color: #fff;
-  border-color: #5372F0;
-  background: #5372F0;
-}
-.filter .slider{
-  margin-top: 12px;
-}
-.filter .slider .filter-info{
-  display: flex;
-  color: #464646;
-  font-size: 14px;
-  justify-content: space-between;
-}
-.filter .slider input{
-  width: 100%;
-  height: 5px;
-  accent-color: #5372F0;
-}
-.editor-panel .rotate{
-  margin-top: 17px;
-}
-.editor-panel .rotate button{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: calc(100% / 4 - 3px);
-}
-.rotate .options button:nth-child(3),
-.rotate .options button:nth-child(4){
-  font-size: 18px;
-}
-.rotate .options button:active{
-  color: #fff;
-  background: #5372F0;
-  border-color: #5372F0;
-}
-.wrapper .preview-img{
-  flex-grow: 1;
-  display: flex;
-  overflow: hidden;
-  margin-left: 20px;
-  border-radius: 5px;
-  align-items: center;
-  justify-content: center;
-}
-.preview-img img{
-  max-width: 490px;
-  max-height: 335px;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.controls button{
-  padding: 11px 20px;
-  font-size: 14px;
-  border-radius: 3px;
-  outline: none;
-  color: #fff;
-  cursor: pointer;
-  background: none;
-  transition: all 0.3s ease;
-  text-transform: uppercase;
-}
-.controls .reset-filter{
-  color: #6C757D;
-  border: 1px solid #6C757D;
-}
-.controls .reset-filter:hover{
-  color: #fff;
-  background: #6C757D;
-}
-.controls .choose-img{
-  background: #6C757D;
-  border: 1px solid #6C757D;
-}
-.controls .save-img{
-  margin-left: 5px;
-  background: #5372F0;
-  border: 1px solid #5372F0;
-}
 
 @media screen and (max-width: 760px) {
   .container{
@@ -1644,3 +1526,69 @@ dialog::backdrop{
     }
 
   }
+
+   /* CLASES */
+
+ @media screen and (max-width: 412px){
+
+ /* CLASES */
+
+
+ .grupos{
+   left: 0px;
+   margin-left: 0px;
+   padding-left: 0px;
+   padding-right: 0px;
+ }
+
+ .grupos-header{
+   position: relative;
+   top: 178px;
+   left: -269px;
+ }
+
+ .grupos-container{
+   padding: 0 1vw;
+ }
+
+ .grupos-card{
+   width: 314px;
+   height: 243px;
+ }
+
+ .grupos-thumb{
+   max-width: 260px;
+ }
+
+ .grupos-info p,
+ .grupos-info .button a{
+   display: none;
+ }
+
+
+ .clases{
+   padding-left: 0px;
+   margin-left: 4px;
+ }
+
+ .clases i.left{
+   left: 0px;
+   top: 490px;
+ }
+
+ .clases i.right{
+   right: 0px;
+   top: 490px;
+   padding-right: 0px;
+ }
+
+}
+
+@media screen and (max-width : 412px) {
+  .formulario_creacion{
+    width: 75%;
+position: relative;
+left: 11vw;
+  }
+
+}
